force-app/main/default/objects/CCS_Contract__c/CCS_Contract__c.object-meta.xml
<CustomObject>
    <label>Contract</label>
    <nameField>
        <label>Contract Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contracts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>