force-app/main/default/objects/CCS_Contract__c/fields/Additional_Contract_Management_Support__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contract_Management_Support__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Provides the name of the person who is providing additional contract management support</inlineHelpText>
    <label>Additional Contract Management Support</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CCS_Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>