force-app/main/default/objects/CCS_Contract__c/fields/AM_Contracts_Finder_Notice_generated__c.field-meta.xml
<CustomField>
    <fullName>AM_Contracts_Finder_Notice_generated__c</fullName>
    <formula>IF(ISBLANK( Contract_Finder_Notice_Id__c),0,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM - Contracts Finder Notice generated?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>