force-app/main/default/objects/CCS_Contract__c/fields/Business_Area__c.field-meta.xml
<CustomField>
    <fullName>Business_Area__c</fullName>
    <label>Business Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>People - Professional Services</fullName>
            </value>
            <value>
                <fullName>Technology - Network Services &amp; Telecoms</fullName>
            </value>
            <value>
                <fullName>Technology - Hardware, Software &amp; Services</fullName>
            </value>
            <value>
                <fullName>Buildings - Property</fullName>
            </value>
            <value>
                <fullName>Corporate Solutions - Communications</fullName>
            </value>
            <value>
                <fullName>Corporate Solutions - Information &amp; Content Management</fullName>
            </value>
            <value>
                <fullName>Corporate Solutions - Contact Centre</fullName>
            </value>
            <value>
                <fullName>Corporate Solutions - Financial Services</fullName>
            </value>
            <value>
                <fullName>Corporate Solutions - Travel</fullName>
            </value>
            <value>
                <fullName>Corporate Solutions - Fleet</fullName>
            </value>
            <value>
                <fullName>Technology - Payroll Solutions</fullName>
            </value>
            <value>
                <fullName>Buildings - Energy</fullName>
            </value>
            <value>
                <fullName>Savings &amp; Performance</fullName>
            </value>
            <value>
                <fullName>CDD Senior Management Team Including McKinsey</fullName>
            </value>
            <value>
                <fullName>Unattributable Plan Spend &amp; Income</fullName>
            </value>
            <value>
                <fullName>Public Sector Resourcing (PSR) Big &amp; Bold</fullName>
            </value>
            <value>
                <fullName>Savings &amp; Performance Including Accelerator</fullName>
            </value>
            <value>
                <fullName>CrownMarketPlace (CMP)</fullName>
            </value>
            <value>
                <fullName>Markets &amp; Suppliers</fullName>
            </value>
            <value>
                <fullName>Deputy Chief Commercial Office</fullName>
            </value>
            <value>
                <fullName>Complex Transactions</fullName>
            </value>
            <value>
                <fullName>Commercial Continuous Improvement Team</fullName>
            </value>
            <value>
                <fullName>Strategic Support Team</fullName>
            </value>
            <value>
                <fullName>CCT Programme Team</fullName>
            </value>
            <value>
                <fullName>Service Ops Newport &amp; Bristol</fullName>
            </value>
            <value>
                <fullName>Buildings Pillar</fullName>
            </value>
            <value>
                <fullName>People Pillar</fullName>
            </value>
            <value>
                <fullName>Corporate Pillar</fullName>
            </value>
            <value>
                <fullName>Technology Pillar</fullName>
            </value>
            <value>
                <fullName>Procurement Ops Senior Management Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>