force-app/main/default/objects/CCS_Contract__c/fields/CAS_Category_Code__c.field-meta.xml
<CustomField>
    <fullName>CAS_Category_Code__c</fullName>
    <inlineHelpText>Categorisation of the request based on the Cabinet Office Common Areas of Spend classification</inlineHelpText>
    <label>CAS Category Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>