force-app/main/default/objects/CCS_Contract__c/fields/CCS_Category__c.field-meta.xml
<CustomField>
    <fullName>CCS_Category__c</fullName>
    <formula>IF(!ISBLANK( Supplier_Framework_Lot__c ), Supplier_Framework_Lot__r.Master_Framework_Lot__r.Master_Framework__r.CCS_Sub_Category__r.Parent__r.Name, Owner:User.CCS_Category__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Provides the CCS category for which the contract is for</inlineHelpText>
    <label>CCS Category</label>
    <type>Text</type>
</CustomField>