force-app/main/default/objects/CCS_Contract__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <inlineHelpText>Provides a contract manager with a free text field to record key contract comments</inlineHelpText>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>