force-app/main/default/objects/CCS_Contract__c/fields/Contract_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Contract_External_Id__c</fullName>
    <description>External Id (not generated by Salesforce) - used as a reference for upserts when migrating data.</description>
    <externalId>true</externalId>
    <label>Contract External Id</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>