force-app/main/default/objects/CCS_Contract__c/fields/Contract_Finder_Notice_Id__c.field-meta.xml
<CustomField>
    <fullName>Contract_Finder_Notice_Id__c</fullName>
    <description>The unique ID for the contract notice which is auto-populated once ‘sent to’ Contracts Finder</description>
    <inlineHelpText>The unique ID for the contract notice which is auto-populated once ‘sent to’ Contracts Finder</inlineHelpText>
    <label>Contract Finder Notice Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>