force-app/main/default/objects/CCS_Contract__c/fields/Contract_Intentions__c.field-meta.xml
<CustomField>
    <fullName>Contract_Intentions__c</fullName>
    <label>Contract Intentions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Renew</fullName>
            </value>
            <value>
                <fullName>Extend</fullName>
            </value>
            <value>
                <fullName>Replace</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>Lapse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>