force-app/main/default/objects/CCS_Contract__c/fields/Contract_Management_Tier__c.field-meta.xml
<CustomField>
    <fullName>Contract_Management_Tier__c</fullName>
    <inlineHelpText>Provides the tier of the contract based on the CM tiering tool</inlineHelpText>
    <label>Contract Management Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>