force-app/main/default/objects/CCS_Contract__c/fields/Contract_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Contract_Next_Steps__c</fullName>
    <inlineHelpText>Provides the current contractual position to support capacity/pipeline management. Note: if all contract extensions have been used the option should be Leave to expire or Potential to replace.</inlineHelpText>
    <label>Contract Next Steps</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Leave to expire</fullName>
            </value>
            <value>
                <fullName>Option to extend</fullName>
            </value>
            <value>
                <fullName>Potential to replace</fullName>
            </value>
            <value>
                <fullName>Replaced by contract/procurement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>