force-app/main/default/objects/CCS_Contract__c/fields/Contract_Reference__c.field-meta.xml
<CustomField>
    <fullName>Contract_Reference__c</fullName>
    <inlineHelpText>The auto-generated unique 9 character reference for the procurement based on a pre-fix and the CAS category. This reference must be used on all procurement/contract documentation</inlineHelpText>
    <label>Contract Reference</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>