force-app/main/default/objects/CCS_Contract__c/fields/Contract_Spend_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Spend_To_Date__c</fullName>
    <inlineHelpText>Provides the current contract spend to date. N.B CCS may not always have access to this information and therefore this should be updated by the contract manager where available</inlineHelpText>
    <label>Contract Spend To Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>