force-app/main/default/objects/CCS_Contract__c/fields/Contract_Tier__c.field-meta.xml
<CustomField>
    <fullName>Contract_Tier__c</fullName>
    <label>Contract Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Critical</fullName>
            </value>
            <value>
                <fullName>Important, but not urgent</fullName>
            </value>
            <value>
                <fullName>Non Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>