force-app/main/default/objects/CCS_Contract__c/fields/Contract_Title_long__c.field-meta.xml
<CustomField>
    <fullName>Contract_Title_long__c</fullName>
    <inlineHelpText>Provides a longer contract title field</inlineHelpText>
    <label>Contract Title (long)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>