force-app/main/default/objects/CCS_Contract__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <inlineHelpText>Provides the type of contract being advertised i.e Goods or Services or Goods and Services or Works</inlineHelpText>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Goods</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Goods &amp; Services</fullName>
            </value>
            <value>
                <fullName>Works</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>