force-app/main/default/objects/CCS_Contract__c/fields/Contracts_Finder_Applicability_Comments__c.field-meta.xml
<CustomField>
    <fullName>Contracts_Finder_Applicability_Comments__c</fullName>
    <label>Contracts Finder Applicability Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>