force-app/main/default/objects/CCS_Contract__c/fields/Contracts_Finder_Hyperlink__c.field-meta.xml
<CustomField>
    <fullName>Contracts_Finder_Hyperlink__c</fullName>
    <formula>IF( Contract_Finder_Notice_Id__c &lt;&gt;&quot;&quot;, HYPERLINK(&quot;https://www.contractsfinder.service.gov.uk/Notice/&quot;&amp; Contract_Finder_Notice_Id__c , &quot;https://www.contractsfinder.service.gov.uk/Notice/&quot;&amp; Contract_Finder_Notice_Id__c), &quot;Contracts Finder Notice not yet created&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Hyperlink to Contracts Finder Notice.  Note that this link only works for published notices.  If a Notice is still unpublished (in draft) the link will show a &apos;Page Not Found&apos; error.</inlineHelpText>
    <label>Contracts Finder Hyperlink</label>
    <type>Text</type>
</CustomField>