force-app/main/default/objects/CCS_Contract__c/fields/Contracts_Finder_Not_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Contracts_Finder_Not_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick this box if there is no requirement to publish a Contracts Finder award notice for this Contract.</inlineHelpText>
    <label>Contracts Finder Not Applicable?</label>
    <type>Checkbox</type>
</CustomField>