force-app/main/default/objects/CCS_Contract__c/fields/Contracts_Finder_Not_Applicable_Reason__c.field-meta.xml
<CustomField>
    <fullName>Contracts_Finder_Not_Applicable_Reason__c</fullName>
    <label>Contracts Finder Not Applicable Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Below £10,000 threshold</fullName>
            </value>
            <value>
                <fullName>Reasons of National Security</fullName>
            </value>
            <value>
                <fullName>Overseas Contracts/Local Restrictions/Customs</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>