force-app/main/default/objects/CCS_Contract__c/fields/Count_Contract_Amendment_Case__c.field-meta.xml
<CustomField>
    <fullName>Count_Contract_Amendment_Case__c</fullName>
    <description>This field is updated from an after insert/delete case trigger.</description>
    <label>Count Contract Amendment Case</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>