force-app/main/default/objects/CCS_Contract__c/fields/Count_of_Amendments__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Amendments__c</fullName>
    <label>Count of Amendments</label>
    <summaryForeignKey>CCS_Contract_Amendment__c.CCS_Contract__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>