force-app/main/default/objects/CCS_Contract__c/fields/Count_of_Level_4_Codes__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Level_4_Codes__c</fullName>
    <description>Keeps count of sub categories that are associated with the Contract</description>
    <inlineHelpText>Keeps count of sub categories that are associated with the Contract</inlineHelpText>
    <label>Count of Level 4 Codes</label>
    <summaryForeignKey>Level_4_Categorisation_Code_for_Contract__c.CCS_Contract__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>