force-app/main/default/objects/CCS_Contract__c/fields/Created_from_Procurement__c.field-meta.xml
<CustomField>
    <fullName>Created_from_Procurement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate whether contract was created directed from a procurement record or not</description>
    <label>Created from Procurement</label>
    <type>Checkbox</type>
</CustomField>