force-app/main/default/objects/CCS_Contract__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Confirms who the customer organisation of the contract is</inlineHelpText>
    <label>Customer Organisation Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Organisation</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts (Customer)</relationshipLabel>
    <relationshipName>CCS_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>