force-app/main/default/objects/CCS_Contract__c/fields/Customer_Account_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account_Owner_Email__c</fullName>
    <label>Customer Account Owner Email</label>
    <type>Email</type>
</CustomField>