force-app/main/default/objects/CCS_Contract__c/fields/Customer_Account_Owner_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account_Owner_Full_Name__c</fullName>
    <label>Customer Account Owner Full Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>