force-app/main/default/objects/CCS_Contract__c/fields/Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Confirms who is the customer contact for the contract</inlineHelpText>
    <label>Customer Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Customer__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts (Customer Contact)</relationshipLabel>
    <relationshipName>CCS_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>