force-app/main/default/objects/CCS_Contract__c/fields/Customer_Contract_Reference__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contract_Reference__c</fullName>
    <inlineHelpText>Provides a specific reference a customer has applied to a request</inlineHelpText>
    <label>Customer&apos;s Reference</label>
    <length>80</length>
    <type>Text</type>
</CustomField>