force-app/main/default/objects/CCS_Contract__c/fields/Date_Contract_Awarded__c.field-meta.xml
<CustomField>
    <fullName>Date_Contract_Awarded__c</fullName>
    <inlineHelpText>This is the date the Contract was signed by the final party. Prior to 24/06/21 this was the date the outcome was issued.</inlineHelpText>
    <label>Contract Award Date</label>
    <type>Date</type>
</CustomField>