force-app/main/default/objects/CCS_Contract__c/fields/Date_Recorded__c.field-meta.xml
<CustomField>
    <fullName>Date_Recorded__c</fullName>
    <inlineHelpText>Provides the date the contract record was created</inlineHelpText>
    <label>Date Recorded</label>
    <type>Date</type>
</CustomField>