force-app/main/default/objects/CCS_Contract__c/fields/Deadline_Date__c.field-meta.xml
<CustomField>
    <fullName>Deadline_Date__c</fullName>
    <inlineHelpText>Provides the deadline for the procurement opportunity</inlineHelpText>
    <label>Closing Date</label>
    <type>Date</type>
</CustomField>