force-app/main/default/objects/CCS_Contract__c/fields/Decision_By_Date__c.field-meta.xml
<CustomField>
    <fullName>Decision_By_Date__c</fullName>
    <inlineHelpText>Provides a date by which the Contracting Authority needs to make a decision on whether to extend, re-procure or leave the contract expire. Date is set by the contract manager and should take into account the procurement route</inlineHelpText>
    <label>Contract Expiry Decision Date</label>
    <type>Date</type>
</CustomField>