force-app/main/default/objects/CCS_Contract__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Provides a succinct description for the contract</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>