force-app/main/default/objects/CCS_Contract__c/fields/Difference_Between_Total_Value_and_Spend__c.field-meta.xml
<CustomField>
    <fullName>Difference_Between_Total_Value_and_Spend__c</fullName>
    <formula>IF( Uplifted_Contract_Value1__c = 0, Contract_Value__c   -  Contract_Spend_To_Date__c,  Uplifted_Contract_Value1__c  - Contract_Spend_To_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>An auto populated field that calculates the difference between the contract value and contract spend</inlineHelpText>
    <label>Difference Between Total Value and Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>