force-app/main/default/objects/CCS_Contract__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <formula>((YEAR(Effective_End_Date__c)-YEAR(Start_Date__c))*12)+ 
(MONTH(Effective_End_Date__c)-MONTH(Start_Date__c))+
(IF( ABS(DAY(Effective_End_Date__c)-DAY(Start_Date__c)) &gt; 15 ,1,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Confirms the number of months the contract is for which is auto populated based on the start/original end dates</inlineHelpText>
    <label>Duration (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>