force-app/main/default/objects/CCS_Contract__c/fields/Effective_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Effective_Contract_Value__c</fullName>
    <formula>IF ((  Uplifted_Contract_Value1__c  == 0 ),  Contract_Value__c  , Uplifted_Contract_Value1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>