force-app/main/default/objects/CCS_Contract__c/fields/Effective_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_End_Date__c</fullName>
    <formula>IF (ISBLANK( New_End_Date__c ), End_Date__c , New_End_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective End Date</label>
    <type>Date</type>
</CustomField>