force-app/main/default/objects/CCS_Contract__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>Confirms the initial end date of the contract</inlineHelpText>
    <label>Original End Date</label>
    <type>Date</type>
</CustomField>