force-app/main/default/objects/CCS_Contract__c/fields/Expiry_Alert_Due__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Alert_Due__c</fullName>
    <description>Check if contract is within a year of expiring for expiry opportunity auto generation</description>
    <formula>TODAY() =  Decision_By_Date__c - 365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiry Alert Due?</label>
    <type>Checkbox</type>
</CustomField>