force-app/main/default/objects/CCS_Contract__c/fields/Expiry_Date_Rating__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date_Rating__c</fullName>
    <formula>IF(  (NOJEU_Flag__c &amp;&amp; Remaining_Months__c &lt; 4 &amp;&amp; Duration__c &lt; 12) || (OJEU_Flag__c &amp;&amp; Remaining_Months__c &lt; 12 &amp;&amp; Duration__c &gt;= 18), IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;red&quot;, 28, 72), 
IF(  (NOJEU_Flag__c &amp;&amp; Remaining_Months__c &lt; 6 &amp;&amp; Duration__c &gt; 12) || (Remaining_Months__c &lt; 18 &amp;&amp; OJEU_Flag__c &amp;&amp; Duration__c &gt;= 18), IMAGE(&quot;/img/samples/light_yellow.gif&quot;, &quot;amber&quot;, 28, 72), 
IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;green&quot;, 28, 72) 
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Call Off, Open Market &amp; STA
* AMBER: Duration is &gt; 12 months AND Remaining Duration &lt; 6 months
* RED: Duration is &lt; 12 months AND Remaining Duration &lt; 4months
OJEU 
* AMBER: Remaining Duration &lt; 18 months
* RED:  Remaining Duration &lt; 12 months</inlineHelpText>
    <label>Expiry Date Rating</label>
    <type>Text</type>
</CustomField>