force-app/main/default/objects/CCS_Contract__c/fields/Expiry_Opp_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Opp_Start_Date__c</fullName>
    <formula>Decision_By_Date__c + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiry Opp Start Date</label>
    <type>Date</type>
</CustomField>