force-app/main/default/objects/CCS_Contract__c/fields/Extension_Details__c.field-meta.xml
<CustomField>
    <fullName>Extension_Details__c</fullName>
    <inlineHelpText>Confirms the extension details as per the Invitation to Tender/Contract. I.e 2 + 1 year</inlineHelpText>
    <label>Extension Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>