force-app/main/default/objects/CCS_Contract__c/fields/Extension_Options__c.field-meta.xml
<CustomField>
    <fullName>Extension_Options__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A ‘tick’ box to confirm if the contract has extension options. N.B A contract manager should ensure this matches the detail within the contract documents and associated Invitation to Tender</inlineHelpText>
    <label>Contract Extension Options</label>
    <type>Checkbox</type>
</CustomField>