force-app/main/default/objects/CCS_Contract__c/fields/Google_Drive_Folder_Link__c.field-meta.xml
<CustomField>
    <fullName>Google_Drive_Folder_Link__c</fullName>
    <inlineHelpText>Provides a link to the google drive folder for where all the contract documentation is stored</inlineHelpText>
    <label>Google Drive Folder</label>
    <type>Url</type>
</CustomField>