force-app/main/default/objects/CCS_Contract__c/fields/Inter_Contract_Spend_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Inter_Contract_Spend_To_Date__c</fullName>
    <label>Contract Spend To Date</label>
    <summarizedField>Purchase_Order__c.Value__c</summarizedField>
    <summaryForeignKey>Purchase_Order__c.Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>