force-app/main/default/objects/CCS_Contract__c/fields/Inter_Difference_Between_Total_Value_and__c.field-meta.xml
<CustomField>
    <fullName>Inter_Difference_Between_Total_Value_and__c</fullName>
    <formula>IF( Uplifted_Contract_Value1__c = 0, Contract_Value__c - Inter_Contract_Spend_To_Date__c, Uplifted_Contract_Value1__c - Inter_Contract_Spend_To_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Difference Between Total Value and Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>