force-app/main/default/objects/CCS_Contract__c/fields/Inter_Spend_Value_Status__c.field-meta.xml
<CustomField>
    <fullName>Inter_Spend_Value_Status__c</fullName>
    <formula>IF( Inter_Contract_Spend_To_Date__c &lt; (0.8 * Effective_Contract_Value__c ), IMAGE(&quot;/img/msg_icons/confirm16.png&quot;, &quot;green&quot;),
IF( Inter_Contract_Spend_To_Date__c &gt; (0.9 * Effective_Contract_Value__c ), IMAGE(&quot;/img//msg_icons/error16.png&quot;, &quot;red&quot;),
IMAGE(&quot;/img/msg_icons/warning16.png&quot;, &quot;yellow&quot;)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spend Value Status</label>
    <type>Text</type>
</CustomField>