force-app/main/default/objects/CCS_Contract__c/fields/Is_Suitable_For_SME__c.field-meta.xml
<CustomField>
    <fullName>Is_Suitable_For_SME__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Required for Contract Finder</description>
    <inlineHelpText>A tick box to confirm if the requirement is suitable for Small and Medium Sized enterprises</inlineHelpText>
    <label>Is Suitable For SME</label>
    <type>Checkbox</type>
</CustomField>