force-app/main/default/objects/CCS_Contract__c/fields/Is_Suitable_for_VCSE__c.field-meta.xml
<CustomField>
    <fullName>Is_Suitable_for_VCSE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Required for Contract Finder</description>
    <inlineHelpText>A tick box to confirm if the requirement is suitable for Voluntary, Community and Social Enterprises</inlineHelpText>
    <label>Is Suitable for VCSE</label>
    <type>Checkbox</type>
</CustomField>