force-app/main/default/objects/CCS_Contract__c/fields/Is_Supplier_SME__c.field-meta.xml
<CustomField>
    <fullName>Is_Supplier_SME__c</fullName>
    <formula>if ((TEXT(Supplier__r.SME_Status__c) == &quot;Micro&quot;) ||
(TEXT(Supplier__r.SME_Status__c) == &quot;Small&quot;) ||
(TEXT(Supplier__r.SME_Status__c) == &quot;Medium&quot;) ||
(TEXT(Supplier__r.SME_Status__c) == &quot;SME (Unclassified)&quot;),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Supplier SME</label>
    <type>Checkbox</type>
</CustomField>