force-app/main/default/objects/CCS_Contract__c/fields/Managed_Contract__c.field-meta.xml
<CustomField>
    <fullName>Managed_Contract__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Provides confirmation that the contract is also managed by CCS. The default for this is ‘yes’, and the tick should only be removed if the contract is not to be managed by CCS</inlineHelpText>
    <label>Managed Contract</label>
    <type>Checkbox</type>
</CustomField>