force-app/main/default/objects/CCS_Contract__c/fields/Master_Framework_Lot_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Master_Framework_Lot_Expiry_Date__c</fullName>
    <formula>Supplier_Framework_Lot__r.Master_Framework_Lot__r.Expiry_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Framework Lot Expiry Date</label>
    <type>Date</type>
</CustomField>