force-app/main/default/objects/CCS_Contract__c/fields/Master_Framework_Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>Master_Framework_Lot_Number__c</fullName>
    <formula>Supplier_Framework_Lot__r.Master_Framework_Lot__r.Master_Framework_Lot_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Provides the lot number from the framework which the call off/direct award is being run</inlineHelpText>
    <label>Framework Lot Number</label>
    <type>Text</type>
</CustomField>