force-app/main/default/objects/CCS_Contract__c/fields/Master_Framework_RM_Number__c.field-meta.xml
<CustomField>
    <fullName>Master_Framework_RM_Number__c</fullName>
    <formula>Supplier_Framework_Lot__r.Master_Framework_Lot__r.Master_Framework__r.RM_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Provides the framework reference number which is auto populated based on the framework name</inlineHelpText>
    <label>RM Number</label>
    <type>Text</type>
</CustomField>