force-app/main/default/objects/CCS_Contract__c/fields/Master_Framework_Status__c.field-meta.xml
<CustomField>
    <fullName>Master_Framework_Status__c</fullName>
    <formula>TEXT(Supplier_Framework_Lot__r.Master_Framework_Lot__r.Master_Framework__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Framework Status</label>
    <type>Text</type>
</CustomField>