force-app/main/default/objects/CCS_Contract__c/fields/Master_Framework_Title__c.field-meta.xml
<CustomField>
    <fullName>Master_Framework_Title__c</fullName>
    <formula>Supplier_Framework_Lot__r.Master_Framework_Lot__r.Master_Framework__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Provides the framework name for the call off competition. N.B This will be blank if the procurement route is not a call off/direct award</inlineHelpText>
    <label>Framework Name</label>
    <type>Text</type>
</CustomField>