force-app/main/default/objects/CCS_Contract__c/fields/Maximum_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Contract_Value__c</fullName>
    <inlineHelpText>Provides a field to record the maximum contract value for which any subsequent amendments should not exceed</inlineHelpText>
    <label>Maximum Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>