force-app/main/default/objects/CCS_Contract__c/fields/New_End_Date__c.field-meta.xml
<CustomField>
    <fullName>New_End_Date__c</fullName>
    <inlineHelpText>Confirms the revised end date of the contract which is auto populated based on the contract amendment related list record. I.e this will auto populate where a contract extension is put in place</inlineHelpText>
    <label>New End Date</label>
    <type>Date</type>
</CustomField>