force-app/main/default/objects/CCS_Contract__c/fields/NOJEU_Flag__c.field-meta.xml
<CustomField>
    <fullName>NOJEU_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NOJEU Flag</label>
    <type>Checkbox</type>
</CustomField>