force-app/main/default/objects/CCS_Contract__c/fields/Notes_and_Actions__c.field-meta.xml
<CustomField>
    <fullName>Notes_and_Actions__c</fullName>
    <label>Notes and Actions</label>
    <type>TextArea</type>
</CustomField>